--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,9 +1,8 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
-
 @plugin "daisyui/theme" {
-  name: "night";
+  name: "hytalab";
   default: false;
   prefersdark: false;
   color-scheme: "dark";
@@ -71,20 +70,6 @@ html {
   background-image: url('src/lib/assets/bg.jpg');
 }
 
-.glass-nav {
-    border: none;
-    backdrop-filter: blur(var(--glass-blur, 50px));
-    background-color: rgba(25, 89, 191, 0.41);
-    background-image: linear-gradient( 135deg, oklch(100% 0 0 / var(--glass-opacity, 30%)) 0%, oklch(0% 0 0 / 0%) 100% ), linear-gradient( var(--glass-reflect-degree, 100deg), oklch(100% 0 0 / var(--glass-reflect-opacity, 5%)) 25%, oklch(0% 0 0 / 0%) 25% );
-    box-shadow: 0 0 0 1px oklch(100% 0 0 / var(--glass-border-opacity, 20%)) inset, 0 0 0 2px oklch(0% 0 0 / 5%);
-    text-shadow: 0 1px oklch(0% 0 0 / var(--glass-text-shadow-opacity, 5%)) /* #000000 */;
-}
-
-.glass-blur {
-    border: none;
-    backdrop-filter: blur(var(--glass-blur, 5px));
-    background-color: #0000;
-    background-image: linear-gradient( 135deg, oklch(100% 0 0 / var(--glass-opacity, 30%)) 0%, oklch(0% 0 0 / 0%) 100% ), linear-gradient( var(--glass-reflect-degree, 100deg), oklch(100% 0 0 / var(--glass-reflect-opacity, 5%)) 25%, oklch(0% 0 0 / 0%) 25% );
-    box-shadow: 0 0 0 1px oklch(100% 0 0 / var(--glass-border-opacity, 20%)) inset, 0 0 0 2px oklch(0% 0 0 / 5%);
-    text-shadow: 0 1px oklch(0% 0 0 / var(--glass-text-shadow-opacity, 5%)) /* #000000 */;
+a {
+  text-decoration: underline dotted;
 }
